refactor: migrate to hertz.
